Fixed the small gap for the nav when entered  in medium-large screen device as shown in sketch

--- a/style/main.css
+++ b/style/main.css
@@ -38,6 +38,7 @@ nav {
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-column: 1/-1;
+    margin-top: -1%;
 }
 
 nav div {
